# CppProjectTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
cmake/: LTO.cmake  docs.cmake  execBashCommand.cmake  gtest.cmake  sanitizer.cmake  tools.cmake  warnings.cmake
configured/: config.hpp.in
lib/: CMakeLists.txt
lib/PrintHello/: CMakeLists.txt  printHello.cpp  printHello.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  unitTestDemo.cpp
